--- a/ExamenUnidad1/angular-wether-app/src/app/app.component.html
+++ b/ExamenUnidad1/angular-wether-app/src/app/app.component.html
@@ -23,7 +23,7 @@
   
  <div class="col-md-6">
    <div *ngIf="weather" class="card card-body">
-     <p>Temperatura: {{weather.main.temp}}</p>
+     <p>Temperatura: {{weather.main.temp}}°c</p>
      <p>Humedad: {{weather.main.humidity}}</p>
      <p>Latitud: {{weather.coord.lat}}</p>
      <p>Longitud: {{weather.coord.lon}}</p>
